<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_small"
    android:orientation="vertical"
    tools:context="com.health.medicare.emedicare.LogInActivity">

    <EditText
        android:id="@+id/mobile_number_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/square_border_with_curve_edge"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:drawableLeft="@android:drawable/ic_menu_call"
        android:drawablePadding="@dimen/drawable_padding"
        android:drawableTint="@color/drawable_color"
        android:padding="@dimen/padding_view" />

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/square_border_with_curve_edge"
        android:maxLength="22"
        android:digits="@string/alphanumbericWithSpecialCharacters"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="@dimen/drawable_padding"
        android:drawableTint="@color/drawable_color"
        android:maxLines="1"
        android:padding="@dimen/padding_view" />

    <Button
        android:id="@+id/sign_in_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@color/buttonBackgroundColor"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/ui_white_digital"
        android:textSize="@dimen/header_textSize" />

    <Button
        android:id="@+id/register_now_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:background="@color/buttonBackgroundColor2"
        android:text="@string/register_now" />
</LinearLayout>
